fix: 모노레포 구조 반영하여 msw 관련 파일 위치 변경

--- a/packages/gymlight-manager/package.json
+++ b/packages/gymlight-manager/package.json
@@ -93,6 +93,7 @@
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "html-webpack-plugin": "^5.6.0",
     "lodash-webpack-plugin": "^0.11.6",
+    "msw": "^2.12.8",
     "pnp-webpack-plugin": "^1.7.0",
     "prettier": "^3.3.3",
     "process": "^0.11.10",
@@ -108,5 +109,10 @@
     "webpack-dev-server": "^5.0.4",
     "webpack-merge": "^6.0.1"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
+  }
 }
