--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -3,6 +3,8 @@ enableGlobalCache: false
 nodeLinker: pnp
 
 packageExtensions:
-  '@storybook/core-common@*':
+  "@storybook/core-common@*":
     dependencies:
-      '@storybook/react-webpack5': ^7.2.2
+      "@storybook/react-webpack5": ^7.2.2
+
+yarnPath: .yarn/releases/yarn-4.12.0.cjs
