--- a/packages/gymlight-manager/package.json
+++ b/packages/gymlight-manager/package.json
@@ -27,7 +27,7 @@
     "apexcharts": "^4.4.0",
     "axios": "^1.7.3",
     "dotenv": "^16.4.5",
-    "gymlight-design-system": "^0.0.1",
+    "gymlight-design-system": "workspace:*",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
     "lodash": "^4.17.21",
