fix: tsconfig에 gymlight-design-system 경로 매핑 추가

--- a/packages/gymlight-manager/tsconfig.json
+++ b/packages/gymlight-manager/tsconfig.json
@@ -13,7 +13,9 @@
     "allowJs": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "gymlight-design-system": ["../gymlight-design-system/src/index.tsx"],
+      "gymlight-design-system/*": ["../gymlight-design-system/src/*"]
     },
     "jsxImportSource": "@emotion/react",
     "allowSyntheticDefaultImports": true,
