fix: 원래 방식으로 복원 (dist 빌드 사용)

--- a/packages/gymlight-manager/tsconfig.json
+++ b/packages/gymlight-manager/tsconfig.json
@@ -13,9 +13,7 @@
     "allowJs": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "gymlight-design-system": ["../gymlight-design-system/src/index.tsx"],
-      "gymlight-design-system/*": ["../gymlight-design-system/src/*"]
+      "@/*": ["./src/*"]
     },
     "jsxImportSource": "@emotion/react",
     "allowSyntheticDefaultImports": true,
