--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+  "framework": null,
   "buildCommand": "yarn build:mock",
   "outputDirectory": "packages/gymlight-manager/dist",
   "installCommand": "yarn install"
