fix: vercel.json을 현재 스크립트에 맞게 수정

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "framework": null,
-  "buildCommand": "yarn build:mock",
-  "outputDirectory": "packages/gymlight-manager/dist",
-  "installCommand": "yarn install"
+  "installCommand": "corepack enable && yarn install --immutable",
+  "buildCommand": "yarn workspace gymlight-manager build:demo",
+  "outputDirectory": "packages/gymlight-manager/dist"
 }
