fix: vercel.json 파일 output 경로 수정

--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,5 @@
   "framework": null,
   "installCommand": "corepack enable && yarn install --immutable",
   "buildCommand": "yarn workspace gymlight-manager build:demo",
-  "outputDirectory": "packages/gymlight-manager/dist"
+  "outputDirectory": "dist"
 }
